@@ -14,6 +14,7 @@
 package se.acode.openehr.parser;
 
 import org.openehr.am.archetype.Archetype;
+import org.openehr.am.archetype.ontology.ArchetypeTerm;
 import org.openehr.am.archetype.ontology.DefinitionItem;
 
 /**
@@ -58,15 +59,15 @@ public class UnicodeSupportTest extends ParserTestBase {
 	 * @throws Exception
 	 */
 	public void testParsingWithChineseText() throws Exception {
-		DefinitionItem def = archetype.getOntology().definition("zh", "at0000");
-		assertNotNull("definition in zh not found", def);
+		ArchetypeTerm term = archetype.getOntology().termDefinition("zh", "at0000");
+		assertNotNull("definition in zh not found", term);
 
 		// "\u6982\u5ff5" is "concept" in Chinese in escaped unicode format 
-		assertEquals("concept text wrong", "\u6982\u5ff5", def.getText());
+		assertEquals("concept text wrong", "\u6982\u5ff5", term.getItem("text"));
 
 		// "\u63cf\u8ff0" is "description" in Chinese in escaped unicode format 
-		assertEquals("concept description wrong", "\u63cf\u8ff0", def
-				.getDescription());
+		assertEquals("concept description wrong", "\u63cf\u8ff0", 
+				term.getItem("description"));
 	}
 
 	/**
@@ -75,15 +76,15 @@ public class UnicodeSupportTest extends ParserTestBase {
 	 * @throws Exception
 	 */
 	public void testParsingWithSwedishText() throws Exception {
-		DefinitionItem def = archetype.getOntology().definition("sv", "at0000");
-		assertNotNull("definition in zh not found", def);
+		ArchetypeTerm term = archetype.getOntology().termDefinition("sv", "at0000");
+		assertNotNull("definition in sv not found", term);
 
 		// "spr\u00e5k" is "language" in Swedish in escaped unicode format 
-		assertEquals("concept text wrong", "spr\u00e5k", def.getText());
+		assertEquals("concept text wrong", "spr\u00e5k", term.getItem("text"));
 
 		// "Hj\u00e4lp" is "help" in Swedish in escaped unicode format 
-		assertEquals("concept description wrong", "Hj\u00e4lp", def
-				.getDescription());
+		assertEquals("concept description wrong", "Hj\u00e4lp", 
+				term.getItem("description"));
 	}
 
 	private Archetype archetype;
